prevent layout shift with animation

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -94,3 +94,8 @@ body {
     }
 }
 
+#stabilized {
+    @media(max-width: 320px) {
+      min-height: 500px;
+    }
+}
